Enhance outbox pattern tests: add integration tests for basic functionality, error handling, and parallel processing capabilities, including message sending, receiving, and retry mechanisms.